gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail22121/imports/test22121/package.d
version https://git-lfs.github.com/spec/v1
oid sha256:8d8b2f1d17909f49b28e276c4a33c8b709dc409b08b7f885ab0bc687a13335ed
size 36
